test/expected/declare_a_nua_f.out
declare f as non-unique-address function
        ^
9: error: function can not be "no_unique_address"
